--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,10 +1,10 @@
 body {
   font-family: "Roboto Condensed", Arial, sans-serif;
-  background: url("/static/img/subtle_dots.png");
+  background-color: #05110d;
   line-height: 1.5em;
-  font-weight: 300;
+  font-weight: 400;
   font-size: 16px;
-  color: #666;
+  color: #2a3b36;
 }
 hr {
   margin-top: 20px;
@@ -14,15 +14,16 @@ hr {
   border-bottom: 1px solid #fff;
 }
 span.time, span.categories {
-  color: #ADADAD;
+  color: #859a94;
   margin-bottom: 5px;
   font-size: 11px;
 }
 h1, h2, h3 {
-  color: #696969;
+  color: #4a4a4a;
   font-weight: normal;
 }
 h1 {
+  margin-top: 20px;
   margin-bottom: 10px;
   font-size: 25px;
 }
@@ -31,15 +32,17 @@ h2, h3 {
 }
 a, a:link, a:active {
   text-decoration: none;
-  color: #3fa757;
+  color: #dc143c;
 }
 a:hover {
-  color: #B3B3B3;
+  color: #d7bc94;
   text-decoration: underline;
 }
 
 /* Layout */
 .main-layout {
+  margin-top: 20px;
+  margin-bottom: 20px;
   background: #fff;
 }
 .sidebar-nav {
@@ -72,10 +75,9 @@ footer {
   border-top: 1px solid #F7F1F1;
   width: 100%;
   height: 10px;
-  margin-top: 10px;
-  margin-bottom: 3em;
-  padding-top: 10px;
-  color: #C2C2C2;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  color: #a2a2a2;
   font-size: 11px;
   bottom: 0;
   padding-bottom: 10px;
@@ -83,18 +85,24 @@ footer {
 
 /* Left column */
 div.col-sm-3 {
-  margin-top: 100px;
+  margin-top: 20px;
   font-size: 11px;
   color: #666;
 }
 div.col-sm-3 strong {
   font-size: 16px;
-  color: #4A4A4A;
+  color: #8c8c8c;
   font-weight: normal;
 }
 div.col-sm-3 div.profile-about {
   margin-top: 10px;
   color: #8C8C8C;
+}
+#profile{
+	margin-bottom: 2em;
+	width: 150px;
+	height: 150px;
+	border-radius: 75px;
 }
 
 /* Pagination */
